--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -26,7 +26,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          user: Peter-JXL
+          user: uiuiqkjn
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
